CSS changes: - adding !important to previous rule, due to the other styles being loaded from a CDN

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2193,6 +2193,6 @@ footer {
   max-width: 680px; }
 
 .select2-container .select2-selection--single {
-  height: auto; }
+  height: auto !important; }
 
 /*# sourceMappingURL=style.css.map */
