--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2456,5 +2456,5 @@ footer {
 }
 // adjusting the height of the inputs on the search users page (admin facing)
 .select2-container .select2-selection--single {
-  height:auto;
+  height:auto!important;
 }
