CSS changes: - specifying the previous rule to be only applied on admin facing pages Markup changes: - added .admin to body tag on admin pages

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2455,6 +2455,6 @@ footer {
   max-width:680px;
 }
 // adjusting the height of the inputs on the search users page (admin facing)
-.select2-container .select2-selection--single {
-  height:auto!important;
+.admin .select2-container .select2-selection--single {
+  // height:auto!important;
 }
