CSS changes: - removing style from body.home - had overflow-y:hidden for some reason... I may have accidentally pushed a piece of testing code.

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -67,7 +67,7 @@ body {
   color: #4a4a4a;
 }
 body.home {
-  overflow-y: hidden;
+  // overflow-y: hidden;
 }
 h1, h2, h3, h4, h5, h6 {
   margin: .5em auto;
