CSS changes: - small fix for links in search results, list view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1897,6 +1897,7 @@ aside.my_properties h3:first-child {
 
 #rental-list a {
   color: inherit;
+  display: block;
   text-decoration: none; }
 
 #sort-widget-menu {
