--- a/public/css/_772px.scss
+++ b/public/css/_772px.scss
@@ -13,6 +13,7 @@ body {
     color: #333333;
     background: #74b164;
     left: 270px;
+    z-index:9000;
   }
   .filter_toggle.active {
     background: #74b164;
