CSS changes: - further mobile optimization for admin views
Markup changes:
- slogan change on home page
- add link on points value in avatar to point to the list showing all the badges / rewards and what point values do

--- a/public/css/_1013px.scss
+++ b/public/css/_1013px.scss
@@ -1,12 +1,14 @@
 // 1013px
-.my_properties {
-	float:none;
-	width:100%;
-	padding:1em;
+.content.rentals {
+	section.my_properties, aside.my_properties {
+		float:none;
+		width:100%;
+		padding:1em;
+	}
 }
 section.my_properties {
-
+	
 }
 aside.my_properties {
-
+	
 }
