--- a/public/css/style.css
+++ b/public/css/style.css
@@ -432,7 +432,8 @@ header .user_actions .list_property {
     border: 1px solid #dddddd;
     width: 641px; }
     .listing_details .listing_overview .listing_image {
-      position: relative; }
+      position: relative;
+      overflow-y: hidden; }
       .listing_details .listing_overview .listing_image h3 {
         font-weight: 400;
         width: 100%;
@@ -733,7 +734,7 @@ ul#items {
   position: relative;
   background: #74b164; }
   .filter form {
-    width: 750px;
+    width: 795px;
     float: left;
     display: block;
     font-family: "open_sans_regular", sans-serif;
@@ -1913,7 +1914,7 @@ ul.hits {
       background: #f1f1f1; }
     ul.hits li img {
       margin-right: 20px;
-      height: 100%;
+      height: 100px;
       width: 150px; }
     ul.hits li i {
       color: #a1a1a1;
@@ -2184,5 +2185,10 @@ li.ui-state-focus {
 
 .admin .select2-container .select2-selection--single {
   height: auto !important; }
+
+body.map {
+  margin: 0; }
+  body.map footer {
+    display: none; }
 
 /*# sourceMappingURL=style.css.map */
